--- a/app/src/main/res/layout/activity_main_recycler.xml
+++ b/app/src/main/res/layout/activity_main_recycler.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_main_recycler"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="org.android.mdsd2016.android.dummyadapter.MainActivity">
+     tools:context="org.android.mdsd2016.android.dummyadapter.MainActivityRecycler">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/list_view_main"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
-    </ListView>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view_list_activity_main_recyler"/>
 
 </RelativeLayout>
